[package]
name = "rsiot-http-client-wasm"
version = "0.0.39"
description = "HTTP-клиент для платформы WASM"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
gloo = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[features]
single-thread = ["rsiot-component-core/single-thread"]
