[package]
name = "rsiot-http-server"
version = "0.0.56"
description = "HTTP-сервер"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
# TODO - нужна только в dev, но ругается на feature
rsiot-extra-components = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }


[features]
"single-thread" = [
    "rsiot-component-core/single-thread",
    "rsiot-extra-components/single-thread",
]
