[package]
description = "Компонент для сохранения данных в БД InfluxDB"
name = "rsiot-influxdb"
edition = "2021"
version = "0.0.51"
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }

rsiot-extra-components = { workspace = true }


[features]
single-thread = ["rsiot-component-core/single-thread"]
