[package]
name = "rsiot-leptos"
version = "0.0.47"
description = "Компоненты для создания интерфейса Leptos"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
async-trait = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-macros = { workspace = true }
rsiot-messages-core = { workspace = true }
rsiot-extra-components = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }


[features]
"single-thread" = [
    "rsiot-component-core/single-thread",
    "rsiot-extra-components/single-thread",
]
