[package]
name = "rsiot-leptos"
version = "0.0.68"
description = "Компоненты для создания интерфейса Leptos"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = { workspace = true }
palette = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

gloo = { workspace = true }
leptos = { workspace = true }
web-sys = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-macros = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }


[features]
"single-thread" = ["rsiot-component-core/single-thread"]
