[package]
name = "rsiot-logging"
version = "0.0.19"
description = "Настройка логгирования"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-loki = { workspace = true }
