[package]
name = "rsiot-logging"
version = "0.0.45"
description = "Настройка логгирования"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = { workspace = true }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
tracing-loki = { workspace = true }
tokio = { workspace = true }
