[package]
description = "Макросы"
name = "rsiot-macros"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.72"


[lib]
proc-macro = true


[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
