[package]
description = "Макросы"
name = "rsiot-macros"
categories = ["api-bindings", "gui", "network-programming"]
edition = "2021"
keywords = ["iot", "scada"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Konstantin-Dudersky/rsiot"
rust-version = "1.75.0"
versio = "0.0.72"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.78" }
proc-macro-error = { version = "1.0.4" }
quote = { version = "1.0.35" }
syn = { version = "2.0.48" }
