[package]
name = "rsiot-messages-core"
version = "0.0.12"
description = "Базовые трейты для реализации типа сообщения"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
