[package]
name = "rsiot-messages-core"
version = "0.0.68"
description = "Базовые трейты для реализации типа сообщения"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

rsiot-macros = { workspace = true }

[features]
serde-json = ["dep:serde_json"]
