[package]
name = "rsiot-modbus-client"
version = "0.0.8"
description = "Опрос устройств Modbus, используя библиотеку tokio-modbus"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tokio-modbus = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }
rsiot-extra-components = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
