[package]
name = "rsiot-modbus-client"
version = "0.0.65"
description = "Опрос устройств Modbus, используя библиотеку tokio-modbus"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-modbus = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }

rsiot-extra-components = { workspace = true }


[features]
single-thread = ["rsiot-component-core/single-thread"]
