[package]
categories.workspace = true
description = "Компонент для исполнения логики наподобие PLC"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-plc"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.31"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
rsiot-extra-components = { workspace = true }
tracing-subscriber = { workspace = true }
