[package]
name = "rsiot-redis-client"
version = "0.0.31"
description = "Подписка и публикация сообщений в Redis"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true


[dependencies]
futures-util = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

rsiot-extra-components = { workspace = true }
