[package]
name = "rsiot-redis-client"
version = "0.0.58"
description = "Подписка и публикация сообщений в Redis"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }

rsiot-extra-components = { workspace = true }


[features]
"single-thread" = ["rsiot-component-core/single-thread"]


[[example]]
name = "publication"
# required-features = ["single-thread"]
