[package]
name = "rsiot-redis-publisher"
version = "0.0.8"
description = "Публикация сообщений в Redis"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-extra-components = { workspace = true }
rsiot-messages-core = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
serde = { workspace = true }
