[package]
name = "rsiot-redis-subscriber"
version = "0.0.4"
edition = "2021"
description = "Подписка на сообщения Redis"
license = "MIT"


[dependencies]
futures-util = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-extra-components = { workspace = true }
rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tracing-subscriber = { workspace = true }
