[package]
name = "rsiot-redis-subscriber"
version = "0.0.9"
description = "Подписка на сообщения Redis"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
futures-util = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-extra-components = { workspace = true }
rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tracing-subscriber = { workspace = true }
