[package]
name = "rsiot-surrealdb"
version = "0.0.47"
edition = "2021"
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Взаимодействие с БД SurrealDB"


[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-extra-components = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }


[features]
single-thread = [
    "rsiot-component-core/single-thread",
    "rsiot-extra-components/single-thread",
]
