[package]
name = "rsiot-timescaledb-storing"
version = "0.0.43"
description = "Сохранение данных в TimescaleDB"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }

rsiot-extra-components = { workspace = true }


[features]
"single-thread" = ["rsiot-component-core/single-thread"]
