[package]
name = "rsiot-websocket-client"
version = "0.0.31"
description = "Websocket-клиент"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

rsiot-extra-components = { workspace = true }
