[package]
name = "rsiot-websocket-client"
version = "0.0.43"
description = "Websocket-клиент"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }

rsiot-extra-components = { workspace = true }


[features]
single-thread = ["rsiot-component-core/single-thread"]
