[package]
name = "rsiot-websocket-server"
version = "0.0.55"
description = "Websocket-сервер"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-components-config = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

rsiot-extra-components = { workspace = true }


[features]
"single-thread" = ["rsiot-component-core/single-thread"]
