[package]
categories.workspace = true
description = "Хранение и загрузка сообщений используя LocalStorage браузера"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-webstorage"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.69"


[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
gloo = { workspace = true }
thiserror = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]


[features]
"single-thread" = ["rsiot-component-core/single-thread"]
